--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -106,6 +106,9 @@
                 ws = new WebSocket("ws://" + window.location.host + "/console/$userInfo/system");
             }
             if (status) {
+                if (ws.readyState != 1 && ws.readyState != 0) {
+                    ws = new WebSocket("ws://" + window.location.host + "/console/$userInfo/system");
+                }
                 ws.onopen = function () {
                     ws.send('{"op": "top", "projectInfo":{}}');
                 };
@@ -137,7 +140,6 @@
 
         //加载病状图
         function loadEcharts(top) {
-            console.log(top);
             if (!top) {
                 return;
             }
