项目分组不必填，列表筛选分组

--- a/src/main/resources/vm/manage/editProject.vm
+++ b/src/main/resources/vm/manage/editProject.vm
@@ -31,8 +31,8 @@
             <div class="layui-inline">
                 <label class="layui-form-label">分组名称</label>
                 <div class="layui-input-block">
-                    <input type="text" name="group" placeholder="项目分组名称" required lay-verify="required"
-                           class="layui-input" value="#if($item)$!item.group#end">
+                    <input type="text" name="group" placeholder="项目分组名称" class="layui-input"
+                           value="#if($item)$!item.group#end">
                 </div>
             </div>
         </div>
