--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -6,7 +6,6 @@
     <title>项目管理系统</title>
     <link rel="stylesheet" href="/static/css/manage/projectInfo.css" media="all">
 </head>
-
 <body>
 <div class="layui-row">
     <button id="addProject" class="layui-btn layui-btn-sm">新增项目</button>
@@ -15,7 +14,6 @@
 </div>
 <table class="layui-table" id="tab_project" lay-filter="tab_project" style="margin: 0;"></table>
 
-</body>
 
 <script type="text/html" id="bar_projects">
     <a href="javascript:;" class="layui-btn  layui-btn-sm layui-btn-normal" lay-event="manage">控制台</a>
@@ -30,6 +28,26 @@
            lay-text="运行中|未运行">
 </script>
 
+<script type="text/html" id="toolbarDemo">
+    <form class="layui-form" action="">
+        <div class="layui-form-item" style="margin-bottom: 0;">
+            <div class="layui-inline">
+                <label class="layui-form-label" style="width: auto !important;">分组</label>
+                <div class="layui-input-inline">
+                    <select name="selectGroup" id="selectGroup" lay-verify="required" lay-filter="groupName"
+                            lay-search="">
+                        <option value="">请选择</option>
+                        #foreach($item in $groups)
+                            <option value="$item">$item</option>
+                        #end
+                    </select>
+                </div>
+            </div>
+        </div>
+    </form>
+</script>
+
+</body>
 <script>
     const HSL = [];
 
@@ -90,6 +108,7 @@
 
 <script type="text/javascript">
     const groupMap = new Map();
+    const apiWhere = {};
 
     function loadSuccess() {
         table.render({
@@ -97,35 +116,40 @@
             elem: '#tab_project',
             url: '/manage/getProjectInfo',
             // height: 'full-52',
+            toolbar: '#toolbarDemo',
             even: true,
+            where: apiWhere,
             cols: [[{
-                field: 'name', title: '项目名称', width: '15%', templet: function (d) {
+                field: 'name', title: '项目名称', width: '15%', sort: true, templet: function (d) {
                     var rgb;
-                    if (d.group) {
-                        var size = groupMap.size;
-                        if (!groupMap.get(d.group)) {
-                            groupMap.set(d.group, "1");
-                            size += 1;
-                            getHslArray(size);
-                        }
-                        rgb = hslToRgb.apply(this, HSL[size - 1]);
-                    }
                     if (!d.manager) {
                         rgb = [211, 211, 211];
+                    } else {
+                        if (d.group) {
+                            var size = groupMap.size;
+                            rgb = groupMap.get(d.group)
+                            if (!rgb) {
+                                size += 1;
+                                getHslArray(size);
+                                rgb = hslToRgb.apply(this, HSL[size - 1]);
+                                groupMap.set(d.group, rgb);
+                            }
+                        }
                     }
                     return "<span   name='" + d.id + "' title='分组：" + d.group + "(项目Id:" + d.id + ")' style='background: rgb(" + rgb + ");padding: 10px;'></span >" + d.name;
                 }
             }, {
-                title: 'lib状态', width: '10%', templet: function (d) {
+                title: 'lib状态', width: '10%', sort: true, templet: function (d) {
                     return (d.runLibDesc || "") + " / " + (d.useLibDesc || "");
                 }
             },
-                {field: 'createTime', title: '创建时间', width: '13%'},
-                {field: 'modifyTime', title: '修改时间', width: '13%'},
-                {title: '运行状态', templet: "#status_templ", width: '10%'},
+                {field: 'createTime', title: '创建时间', sort: true, width: '13%'},
+                {field: 'modifyTime', title: '修改时间', sort: true, width: '13%'},
+                {title: '运行状态', templet: "#status_templ", sort: true, width: '10%'},
                 {field: 'op', title: '操作', toolbar: '#bar_projects'}
             ]],
             loading: true,
+            method: 'POST',
             response: {
                 statusCode: 200
             }, done: function (data) {
@@ -136,6 +160,9 @@
                         $('tr[data-index="' + i + '"').css('background-color', 'rgb(211,211,211)');
                     }
                 }
+                // 选中
+                $("#selectGroup option[value='" + apiWhere.group + "']").attr("selected", "selected");
+                form.render();
             }
         });
 
@@ -159,6 +186,12 @@
                 content: 'editProject?id=' + id
             });
         }
+
+        form.on('select(groupName)', function (data) {
+            apiWhere.group = data.value;
+            reloadTable();
+            return true;
+        });
 
         // 表格工具条事件
         table.on('tool(tab_project)', function (obj) {
@@ -235,7 +268,7 @@
 
     function reloadTable() {
         table.reload('table_project', {
-            // height: 'full-52'
+            where: apiWhere
         });
     }
 </script>
