阿里云oss 配置转为页面

--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -48,6 +48,10 @@
                     <a href="javascript:;"
                        data-options="{'id':'whitelistDirectory', 'title':'白名单目录', 'url':'/system/whitelistDirectory'}">白名单目录</a>
                 </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;"
+                       data-options="{'id':'alioss', 'title':'阿里云OSS', 'url':'/system/alioss'}">阿里云OSS</a>
+                </li>
             </ul>
         </div>
     </div>
