日志备份管理

--- a/src/main/resources/vm/manage/console.vm
+++ b/src/main/resources/vm/manage/console.vm
@@ -15,6 +15,9 @@
             #if($logSize)
                 <button id="export" class="layui-btn layui-btn-sm">导出日志(<span id="logSize">$logSize</span>)</button>
             #end
+            #if($logBack)
+                <button id="logBack" class="layui-btn layui-btn-sm">日志备份</button>
+            #end
 
             <a href="javascript:;" class="btn-op layui-btn  layui-btn-sm" op="start">启动</a>
             <a href="javascript:;" class="btn-op layui-btn  layui-btn-sm layui-btn-warm" op="restart">重启</a>
@@ -178,6 +181,16 @@
         $('#export').on('click', function () {
             location.href = "export.html?id=" + projectInfo.id;
         });
+
+        $("#logBack").on('click', function () {
+            layer.open({
+                type: 2,
+                title: '日志备份',
+                shade: 0.8,
+                area: ['80%', '90%'],
+                content: 'logBack?id=' + projectInfo.id
+            });
+        })
     }
 </script>
 </html>
